--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="overlay">
         <h1>Welcome to My Website</h1>
-        <p>Hello! I'm [Your Name]. This is my personal space on the web.</p>
+        <p>Hello! I'm Vijaya. This is my personal space on the web.</p>
         <a href="https://github.com/your-username" class="btn">Visit My GitHub</a>
     </div>
 </body>
