--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="overlay">
         <h1>Welcome to My Website</h1>
         <p>Hello! I'm Vijaya. This is my personal space on the web.</p>
-        <a href="https://github.com/your-username" class="btn">Visit My GitHub</a>
+        <a href="https://github.com/vijayb373" class="btn">Visit My GitHub</a>
     </div>
 </body>
 </html>
